# own_map

./: .gitignore  Makefile  README.md  docker-compose.yml
exif_reader/: Cargo.toml  Dockerfile  Makefile  README.md  build.rs  tarpaulin-report.html
exif_reader/proto/: exif_readers_grpc.proto
exif_reader/src/: config.rs  directory_reader.rs  logger.rs  main.rs  message.rs  producer.rs  utils.rs
geo_searcher/: .gitignore  pytest.ini
geo_searcher/app/: app_facade.py  consumer.py  main.py  mongo_client.py  schema.py  utils.py
geo_searcher/app/config/: config.py  kafka_config.py  mongodb_config.py
geo_searcher/tests/: conftest.py  test.py
save_coordinates/: Makefile  go.mod  go.sum
save_coordinates/cmd/: main.go
save_coordinates/internal/database/: coordinates.sql.go  models.go
save_coordinates/internal/models/: models.go
save_coordinates/internal/service/: db_test.go  service.go
save_coordinates/pkg/app/: app.go  config.go
save_coordinates/proto/: exif_readers_grpc.pb.go
save_coordinates/sql/migrations/: 001_coodinates.sql
save_coordinates/sql/queries/: coordinates.sql
save_iso_code/: go.mod  go.sum
save_iso_code/cmd/save_iso_data/: main.go
save_iso_code/internal/configuration/: config.go
save_iso_code/internal/download_data/: get_iso_code.go
save_iso_code/internal/model/: model.go
save_iso_code/internal/save_in_cache/: cache.go  cache_test.go
