[package]
name = "exif_reader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[[bin]]
name = "exif_reader"
path = "src/main.rs"

[dependencies]
kamadak-exif = "0.5.4"
rdkafka = { version = "0.25", default-features = false}
cmake = "0.1.48"
tokio = {version="1.20.1", features = ["full"]}
clap = "3.2.16"
log = "0.4.17"
chrono = "0.4.20"
env_logger = "0.9.0"
regex = "1.6.0"
serde_json = "1.0.83"
walkdir = "2"
config = "0.13.1"
serde = { version = "1.0.136", features = ["derive"] }
dotenv = "0.15.0"
crypto = "0.5.1"
openssl = "0.10.57"
tonic = "0.8.2"
prost = "0.11.2"
prost-types = "0.11.2"

[build-dependencies]
tonic-build = "0.8.2"
